# Naive-RAG-System-Using---MongoDB---Multi-LLM-Providers

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: .env.example  docker-compose.yml
src/: main.py
src/assets/: .gitignore
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectCntroller.py  VectorStoreController.py  __init__.py
src/helpers/: config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py
src/models/db_schemas/: __init__.py  asset.py  data_chunk.py  project.py
src/models/enums/: AssetTypeEnum.py  DataBaseEnum.py  ProcessingEnum.py  ResponseEnum.py  __init__.py
src/routes/: __init__.py  base.py  data.py  vector_store.py
src/routes/schemas/: data.py  vector_store.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py  __init__.py
src/stores/llm/providers/: CoHereProvider.py  OpenAIProvider.py  OpenRouterProvider.py
src/stores/llm/system_templates/: template_parser.py
src/stores/llm/system_templates/locales/ar/: rag.py
src/stores/llm/system_templates/locales/en/: __init__.py  rag.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py  __init__.py
src/stores/vectordb/providers/: QdrantDBProvider.py
