[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "cohere==7.0.0",
    "colorama==0.4.6",
    "fastapi==0.110.2",
    "groq==1.2.0",
    "langchain==1.2.15",
    "langchain-community==0.4.1",
    "motor==3.7.1",
    "openai==2.38.0",
    "psycopg2==2.9.12",
    "pydantic-settings==2.13.1",
    "pymupdf==1.27.2.2",
    "pymupdf4llm==1.27.2.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.9",
    "qdrant-client==1.18.0",
    "sqlalchemy==2.0.50",
    "termcolor==3.3.0",
    "uvicorn[standard]==0.29.0",
]
